Import Debian changes 3.7p3-14~deb9u1
canna (3.7p3-14~deb9u1) stretch; urgency=medium

  * QA upload.
  * Rebuild for stretch.

canna (3.7p3-14) unstable; urgency=medium

  * QA upload.
  * Make cannakill a symlink to catdic, fixing the file conflict
    between canna-dbgsym and canna-utils-dbgsym. (Closes: #868541)
  * Add the missing lsb-base dependency to canna.

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/canna.git
 
 Package: canna
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, adduser (>= 3.34), canna-utils
+Depends: lsb-base, ${misc:Depends}, ${shlibs:Depends}, adduser (>= 3.34), canna-utils
 Suggests: canna-shion
 Description: input system for Japanese - server and dictionary
  Canna provides a unified user interface for Japanese input. It is based
