--- a/canuum/config.h.in
+++ b/canuum/config.h.in
@@ -1,27 +1,4 @@
-/* config.h.in.  Generated from configure.in by autoheader.  */
-/* acconfig.h,v 1.4 2002/06/22 13:15:25 hiroo Exp */
-/* Canna: $Id: acconfig.h,v 1.3 2003/01/24 14:42:02 aida_s Exp $ */
-
-/* Define `socklen_t' to int if <sys/socket.h> does not define. */
-#undef socklen_t
-
-/* Define to `long' if <sys/types.h> does not define.  */
-#undef time_t
-
-/*
- * Defined if you allow creating a file in an arbitrary path
- * which is the traditional feature.
- */
-#undef WNN_ALLOW_UNSAFE_PATH
-
-/* Define if the signal function returns void. */
-#undef RETSIGTYPE_VOID
-
-/* Define when terminfo support found */
-#undef HAVE_TERMINFO
-
-/* Define when union wait exists */
-#undef HAVE_UNION_WAIT
+/* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Define to 1 if the `getpgrp' function requires zero arguments. */
 #undef GETPGRP_VOID
@@ -188,6 +165,9 @@
 /* Define to 1 if you have the <termcap.h> header file. */
 #undef HAVE_TERMCAP_H
 
+/* Whether have terminfo */
+#undef HAVE_TERMINFO
+
 /* Define to 1 if you have the <termios.h> header file. */
 #undef HAVE_TERMIOS_H
 
@@ -196,6 +176,9 @@
 
 /* Define to 1 if you have the <term.h> header file. */
 #undef HAVE_TERM_H
+
+/* Check for union wait */
+#undef HAVE_UNION_WAIT
 
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
@@ -217,6 +200,9 @@
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
+
+/* Define to the home page for this package. */
+#undef PACKAGE_URL
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
