--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,1 +1,8 @@
 
+bin_PROGRAMS = cannaserver
+
+AM_CFLAGS = -I$(top_srcdir)/canna -I$(top_srcdir)/lib
+
+cannaserver_SOURCES = comm.c session.c convert.c wconvert.c main.c \
+    misc.c util.c
+
