--- a/configure.ac
+++ b/configure.ac
@@ -9,11 +9,18 @@ AC_CONFIG_SRCDIR([WHATIS.jp])
 AM_INIT_AUTOMAKE
 
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIRS([m4])
 
+############################
 # Checks for programs.
+
 AC_PROG_CXX
 AC_PROG_CC
+# AC_PROG_RANLIB
+# AM_PROG_LIBTOOL is deprecated.
+LT_INIT
 
+############################
 # Checks for libraries.
 
 # Checks for header files.
@@ -51,6 +58,7 @@ AC_CHECK_FUNCS([bzero dup2 gethostbyaddr gethostbyname gethostname inet_ntoa mem
 AC_CHECK_SIZEOF([void *])
 AC_CHECK_MEMBERS([struct hostent.h_addr_list],,,[#include <netdb.h>])
 AC_CONFIG_FILES([
+  Makefile
 lib/RK/Makefile
 lib/canna/Makefile
 lib/RKC16/Makefile
@@ -85,7 +93,6 @@ canna/Makefile
 doc/Makefile
 doc/man/guide/Makefile
 doc/man/guide/tex/Makefile
-Makefile
 dic/phono/Makefile
 dic/ideo/Makefile
 dic/ideo/pubdic/Makefile
@@ -97,61 +104,6 @@ misc/initfiles/Makefile
 misc/Makefile
 server/Makefile
   ])
-
-dnl PUBCONF_DEFINE(NAME,VALUE)
-define([PUBCONF_PREFIX],[CANNA_])
-AC_DEFUN([PUBCONF_DEFINE],[dnl
-cat << PUBCONF_EOF >> "$pubconf_tmp"
-[#]define PUBCONF_PREFIX[$1] [$2]
-PUBCONF_EOF[]dnl
-])
-dnl PUBCONF_NOTDEF(NAME)
-AC_DEFUN([PUBCONF_NOTDEF],[dnl
-echo "/* [#]undef PUBCONF_PREFIX[$1] */" >> "$pubconf_tmp"[]dnl
-])
-dnl PUBCONF_DEFINE_IF(NAME,COND)
-AC_DEFUN([PUBCONF_DEFINE_IF],[dnl
-if [$2]; then
-  PUBCONF_DEFINE([$1],1)
-else
-  PUBCONF_NOTDEF([$1])
-fi
-])
-dnl PUBCONF_DEFINE_YESNO(NAME,VAR)
-AC_DEFUN([PUBCONF_DEFINE_YESNO],[PUBCONF_DEFINE_IF([$1],[test "x$][$2" = xyes])])
-
-AC_CONFIG_COMMANDS([pubconf.h],[
-pubconf_hdr="pubconf.h"
-pubconf_tmp="$pubconf_hdr.tmp"
-AC_MSG_NOTICE([creating "$pubconf_hdr"])
-
-cat << PUBCONF_EOF > "$pubconf_tmp"
-/* Generated file. Modify "configure.ac" instead of this file. */
-#ifndef CANNA_PUBCONF_H
-#define CANNA_PUBCONF_H
-
-PUBCONF_EOF
-
-PUBCONF_DEFINE_YESNO([HAVE_INTTYPES_H],[pubconf_header_inttypes_h])
-PUBCONF_DEFINE_YESNO([HAVE_STDINT_H],[pubconf_header_stdint_h])
-PUBCONF_DEFINE_YESNO([HAVE_INT32_T],[pubconf_type_int32_t])
-
-cat << PUBCONF_EOF >> "$pubconf_tmp"
-
-#endif /* CANNA_PUBCONF_H */
-PUBCONF_EOF
-
-if cmp -s "$pubconf_hdr" "$pubconf_tmp"; then
-  AC_MSG_NOTICE(["$pubconf_hdr" is unchanged])
-  rm "$pubconf_tmp"
-else
-  mv "$pubconf_tmp" "$pubconf_hdr"
-  fi
-],[
-  m4_foreach([Var],[header_inttypes_h,header_stdint_h,type_int32_t],[dnl
-    [pubconf_]Var="[$ac_cv_]Var"
-  ])
-])
 
 AC_CONFIG_SUBDIRS([canuum])
 AC_OUTPUT
