--- a/lib/canna/Makefile.am
+++ b/lib/canna/Makefile.am
@@ -1,1 +1,11 @@
 
+AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
+
+lib_LIBRARIES = libcanna.a
+libcanna_a_SOURCES = lisp.c defaultmap.c \
+    bushu.c chikuji.c commondata.c empty.c henkan.c hex.c \
+    ichiran.c jishu.c kctrl.c keydef.c \
+    kigo.c mode.c multi.c onoff.c parse.c romaji.c \
+    uiutil.c uldefine.c uldelete.c ulhinshi.c ulkigo.c \
+    ulmount.c ulserver.c util.c yesno.c bunsetsu.c \
+    engine.c RKroma.c RKkana.c obind.c
