--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,7 +1,7 @@
 
 bin_PROGRAMS = cannaserver
 
-AM_CFLAGS = -I$(top_srcdir)/canna -I$(top_srcdir)/lib
+AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 
 cannaserver_SOURCES = comm.c session.c convert.c wconvert.c main.c \
     misc.c util.c
