--- a/lib/RK/Makefile.am
+++ b/lib/RK/Makefile.am
@@ -1,1 +1,10 @@
 
+noinst_LIBRARIES = libRK.a
+
+AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
+
+libRK_a_SOURCES = dicsw.c permdic.c tempdic.c ngram.c \
+    context.c bun.c ncache.c \
+    nword.c dic.c util.c kana.c \
+    bits.c dd.c fq.c
+
