--- a/lib/canna/Makefile.am
+++ b/lib/canna/Makefile.am
@@ -1,8 +1,8 @@
 
 AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 
-lib_LIBRARIES = libcanna.a
-libcanna_a_SOURCES = lisp.c defaultmap.c \
+lib_LTLIBRARIES = libcanna.la
+libcanna_la_SOURCES = lisp.c defaultmap.c \
     bushu.c chikuji.c commondata.c empty.c henkan.c hex.c \
     ichiran.c jishu.c kctrl.c keydef.c \
     kigo.c mode.c multi.c onoff.c parse.c romaji.c \
