--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,6 @@
 
 SUBDIRS = canna cmd dic doc lib misc server
 
+nobase_include_HEADERS = canna/RK.h  canna/jrkanji.h  canna/keydef.h  canna/mfdef.h  canna/pubconf.h  canna/sysdep.h
+
+
