--- a/lib/RKC/Makefile.am
+++ b/lib/RKC/Makefile.am
@@ -1,6 +1,6 @@
 
 lib_LTLIBRARIES = libRKC.la
 
-AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
-
-libRKC_la_SOURCES = rkc.c convert.c wconvert.c wutil.c conf.c cfuncs.c file.c strops.c
+libRKC_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib -DCPP='"$(CPP)"'
+libRKC_la_LDFLAGS = -version-info 1:3:0
+libRKC_la_SOURCES = rkc.c convert.c wconvert.c wutil.c conf.c ../RKindep/cfuncs.c ../RKindep/file.c ../RKindep/strops.c
