--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,5 @@
 
-SUBDIRS = canna cmd dic doc lib misc server
+SUBDIRS = canna dic doc lib misc server cmd 
 
 nobase_include_HEADERS = canna/RK.h  canna/jrkanji.h  canna/keydef.h  canna/mfdef.h  canna/pubconf.h  canna/sysdep.h
-
 
