--- a/server/Makefile.am
+++ b/server/Makefile.am
@@ -1,8 +1,9 @@
 
-bin_PROGRAMS = cannaserver
+sbin_PROGRAMS = cannaserver
 
 AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 
+cannaserver_LDADD = ../lib/RK/libRK.a ../lib/RKindep/libRKindep.a
 cannaserver_SOURCES = comm.c session.c convert.c wconvert.c main.c \
     misc.c util.c
 
