--- a/cmd/catdic/Makefile.am
+++ b/cmd/catdic/Makefile.am
@@ -8,15 +8,15 @@ catdic_LDADD = ../../lib/RKC/libRKC.la
 
 install-exec-hook:
 	cd $(DESTDIR)$(bindir) && \
-	$(LN_S) catdic$(EXEEXT) addwords$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) chmoddic$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) cpdic$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) delwords$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) lsdic$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) mkdic$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) mvdic$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) rmdic$(EXEEXT) && \
-	$(LN_S) catdic$(EXEEXT) syncdic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) addwords$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) chmoddic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) cpdic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) delwords$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) lsdic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) mkdic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) mvdic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) rmdic$(EXEEXT) && \
+	$(LN_S) -f catdic$(EXEEXT) syncdic$(EXEEXT) && \
 	cd $(DESTDIR)$(sbindir) && \
-	$(LN_S) ../bin/catdic$(EXEEXT) cannakill$(EXEEXT)
+	$(LN_S) -f ../bin/catdic$(EXEEXT) cannakill$(EXEEXT)
 
