--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -1,3 +1,7 @@
 
-SUBDIRS = catdic
+AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
+
+SUBDIRS = catdic canlisp cannacheck cannastat chkconc crfreq crxdic crxgram \
+    cshost ctow dicar dpbindic dpromdic dpxdic forcpp forsort kpdic mergewd \
+    mkbindic mkromdic splitwd wtoc
 
