--- a/lib/RK/Makefile.am
+++ b/lib/RK/Makefile.am
@@ -1,9 +1,9 @@
 
-noinst_LIBRARIES = libRK.a
+noinst_LTLIBRARIES = libRK.la
 
-libRK_a_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib -fPIC
-libRK_a_SOURCES = dicsw.c permdic.c tempdic.c ngram.c \
+libRK_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
+libRK_la_SOURCES = dicsw.c permdic.c tempdic.c ngram.c \
     context.c bun.c ncache.c \
     nword.c dic.c util.c kana.c \
     bits.c dd.c fq.c
-
+libRK_la_LDFLAGS = -static
