--- a/lib/canna/Makefile.am
+++ b/lib/canna/Makefile.am
@@ -10,6 +10,6 @@ libcanna_la_SOURCES = lisp.c defaultmap.c \
     kigo.c mode.c multi.c onoff.c parse.c romaji.c \
     uiutil.c uldefine.c uldelete.c ulhinshi.c ulkigo.c \
     ulmount.c ulserver.c util.c yesno.c bunsetsu.c \
-    engine.c RKroma.c RKkana.c jrbind.c ebind.c
+    engine.c RKroma.c ../RK/kana.c jrbind.c ebind.c
 #libcanna_la_LIBADD = ../RK/libRK.a
 libcanna_la_LIBADD = ../RKC/libRKC.la
