lib/RKindep/cksum.c from FreeBSD.

--- a/lib/RKC/Makefile.am
+++ b/lib/RKC/Makefile.am
@@ -7,4 +7,4 @@ libRKC_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib -DCPP='"$(CPP)"'
 # current:revision:age
 # => *.so.(current-age).age.revision
 libRKC_la_LDFLAGS = -version-info 3:1:2   
-libRKC_la_SOURCES = rkc.c convert.c wconvert.c ../RK/widechar.c conf.c ../RKindep/cfuncs.c ../RKindep/file.c ../RKindep/strops.c
+libRKC_la_SOURCES = rkc.c convert.c wconvert.c ../RK/widechar.c conf.c ../RKindep/cfuncs.c ../RKindep/file.c ../RKindep/strops.c ../RK/kana.c
