--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Build-Depends: debhelper (>> 7.0.50~), libx11-dev, xutils-dev, po-debconf,
  texlive-latex-recommended, autotools-dev
 Standards-Version: 4.5.0
 Homepage: http://canna.sourceforge.jp/
-Vcs-Git: git://anonscm.debian.org/collab-maint/canna.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/canna.git
+Vcs-Browser: https://salsa.debian.org/debian/canna
+Vcs-Git: https://salsa.debian.org/debian/canna.git
 
 Package: canna
 Architecture: any
