--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: autoconf,
                texlive-latex-recommended,
                xutils-dev
 Standards-Version: 4.5.0
+Rules-Requires-Root: binary-targets
 Homepage: http://canna.sourceforge.jp/
 Vcs-Browser: https://salsa.debian.org/debian/canna
 Vcs-Git: https://salsa.debian.org/debian/canna.git
