--- a/Canna.conf
+++ b/Canna.conf
@@ -109,12 +109,12 @@
 # define DefErrDir $(cannaPrefix)/log
 # define DefLibCannaDir $(cannaExecPrefix)/lib
 #else 
-# define DefCannaPrefix /usr/local/canna
+# define DefCannaPrefix /usr
 # ifdef ObsoleteInstallDir
 #  define DefErrDir /usr/spool/canna
-#  define DefLibCannaDir /usr/lib
+#  define DefLibCannaDir /usr/lib64
 # else
-#  define DefErrDir /var/log
+#  define DefErrDir /var/log/canna
 #  define DefLibCannaDir $(cannaExecPrefix)/lib
 # endif
 #endif
@@ -123,7 +123,7 @@
 # define DefCannaLibDir $(cannaPrefix)/lib
 #else
 # define DefCannaSrvDir $(cannaExecPrefix)/sbin
-# define DefCannaLibDir $(cannaPrefix)/share/canna
+# define DefCannaLibDir $(cannaPrefix)/lib
 #endif
 
 #if defined(LinuxArchitecture) || defined(FreeBSDArchitecture) \
@@ -146,9 +146,11 @@ cannaBinDir = $(cannaExecPrefix)/bin
 cannaSrvDir = DefCannaSrvDir
 XCOMM cannaLibDir = /var/lib/canna
 XCOMM cannaLibDir = /var/db/canna
-cannaLibDir = DefCannaLibDir
+cannaLibDir = /etc/canna
+cannaEtcDir = /etc/canna
+cannaShareDir = $(cannaPrefix)/share/canna
 XCOMM cannaManDir = $(cannaPrefix)/share/man
-cannaManDir = $(cannaPrefix)/man
+cannaManDir = $(cannaPrefix)/share/man
 cannaIncDir = $(cannaPrefix)/include/canna
 
 libCannaDir = DefLibCannaDir
@@ -158,7 +160,7 @@ ErrDir  = DefErrDir
 #define SupportOldWchar 1
 
 /* IPv6を用いる場合は1と定義してください */
-#define UseInet6 0 /* requires newer IPv6 implementation */
+#define UseInet6 1 /* requires newer IPv6 implementation */
 
 /* 3.2系から3.6系までの形式の辞書を作る場合はこれを定義してください */
 /* #define DIC_3_6_COMPAT */
@@ -175,10 +177,10 @@ cannaGroup = bin
 #ifdef InstallAsUser
 cannaOwnerGroup =
 #else
-cannaOwnerGroup = -o $(cannaOwner) -g $(cannaGroup)
+cannaOwnerGroup =
 #endif
 
-cannaDsoRev = 1.2
+cannaDsoRev = 1.2.0
 
 #if defined(cygwinArchitecture)
 /* import libraryの方を指定しておく。DLL本体は/usr/X11R6/binに入る。 */
@@ -199,8 +201,8 @@ CHOWN = :
 CHGRP = :
 CHMOD = :
 #else
-CHOWN = chown
-CHGRP = chgrp
+CHOWN = echo
+CHGRP = echo
 CHMOD = chmod
 #endif
 
@@ -237,7 +239,7 @@ cannaLight = 1
 /* #define UseInstalledLibCanna YES */
 #define UseInstalledLibCanna NO
 
-DicDir   = $(cannaLibDir)/dic
+DicDir   = /var/lib/canna/dic
 
 /* ここから下は変更不要です */
 
@@ -339,10 +341,10 @@ useObsoleteFilename = -DUSE_OBSOLETE_STYLE_FILENAME
 #endif
 
 #ifdef InstallAsUser
-UnixSockDir = $(cannaPrefix)/tmp/.iroha_unix
+UnixSockDir = $(cannaPrefix)/var/run/.iroha_unix
 AccessFile = $(cannaPrefix)/etc/hosts.canna
 #else
-UnixSockDir = /tmp/.iroha_unix
+UnixSockDir = /var/run/.iroha_unix
 AccessFile = /etc/hosts.canna
 #endif
 UnixSockName = IROHA
