Fix compiling errors.
libcanna, libRKC を削除し, 同16のみとした。
#4

--- a/cmd/canlisp/Makefile.am
+++ b/cmd/canlisp/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 bin_PROGRAMS = canlisp
 
 canlisp_SOURCES = canlisp.c
-canlisp_LDADD = ../../lib/RKindep/libRKindep.la ../../lib/canna/libcanna.la 
+canlisp_LDADD = ../../lib/RKindep/libRKindep.la ../../lib/canna/libcanna16.la 
