--- a/cmd/cannacheck/Makefile.am
+++ b/cmd/cannacheck/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 bin_PROGRAMS = cannacheck
 
 cannacheck_SOURCES = main.c
-cannacheck_LDADD = ../../lib/canna/libcanna.la
+cannacheck_LDADD = ../../lib/canna/libcanna16.la
