--- a/cmd/cannastat/Makefile.am
+++ b/cmd/cannastat/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 bin_PROGRAMS = cannastat
 
 cannastat_SOURCES = cannastat.c
-cannastat_LDADD = ../../lib/RKC/libRKC.la
+cannastat_LDADD = ../../lib/RKC/libRKC16.la
