--- a/cmd/cshost/Makefile.am
+++ b/cmd/cshost/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 bin_PROGRAMS = cshost
 
 cshost_SOURCES = cshost.c
-cshost_LDADD = ../../lib/RKC/libRKC.la
+cshost_LDADD = ../../lib/RKC/libRKC16.la
