--- a/lib/canna/Makefile.am
+++ b/lib/canna/Makefile.am
@@ -1,10 +1,12 @@
 
-AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
+AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib -DPKGDATADIR='"$(pkgdatadir)"'
 
-lib_LTLIBRARIES = libcanna.la
+lib_LTLIBRARIES = libcanna16.la
 
-libcanna_la_LDFLAGS = -version-info 3:1:2
-libcanna_la_SOURCES = lisp.c defaultmap.c \
+# current:revision:age
+# => *.so.(current-age).age.revision
+libcanna16_la_LDFLAGS = -version-info 2:1:0
+libcanna16_la_SOURCES = lisp.c defaultmap.c \
     bushu.c chikuji.c commondata.c empty.c henkan.c hex.c \
     ichiran.c jishu.c kctrl.c keydef.c \
     kigo.c mode.c multi.c onoff.c parse.c romaji.c \
@@ -12,4 +14,4 @@ libcanna_la_SOURCES = lisp.c defaultmap.c \
     ulmount.c ulserver.c util.c yesno.c bunsetsu.c \
     engine.c RKroma.c jrbind.c ebind.c
 #libcanna_la_LIBADD = ../RK/libRK.a
-libcanna_la_LIBADD = ../RKC/libRKC.la
+libcanna16_la_LIBADD = ../RKC/libRKC16.la
