--- a/dic/ideo/grammar/Makefile.am
+++ b/dic/ideo/grammar/Makefile.am
@@ -1,18 +1,32 @@
 
+# localstatedir = ${prefix}/var
+dicdir = ${localstatedir}/canna/dic
+dist_dic_DATA = fuzokugo.cbd
+
+SORT = sort
+
+CANNACMDDIR = ../../../cmd
+CRXGRAM = $(CANNACMDDIR)/crxgram/crxgram
+CRXDIC = $(CANNACMDDIR)/crxdic/crxdic
+CRFREQ = $(CANNACMDDIR)/crfreq/crfreq
+MERGE = $(CANNACMDDIR)/mergewd/mergeword
+FORSORT = $(CANNACMDDIR)/forsort/forsort
+FORCPP = $(CANNACMDDIR)/forcpp/forcpp
+
 cpp.gram: gram.code gram.goto main.code
-	$(FORCPP) -7 < gram.code | \
-		$(CPP) $(DEFINES) | \
-		$(FORCPP) -8 > cpp.gram
+	$(FORCPP) -7 < $<  | \
+		$(CPP) $(DEFINES) -I$(top_srcdir)/dic/ideo/grammar - | \
+		$(FORCPP) -8 > $@
 
 cnj.swd cnj.bits cnj.h cnj.mac: cpp.gram 
-		$(CRXGRAM) -f cpp.gram
+		$(CRXGRAM) -f $< 
 
 fuzokugo.swd: cnj.swd
-	$(FORSORT) -7 < cnj.swd | \
+	$(FORSORT) -7 < $<  | \
 		$(SORT) | \
 		$(FORSORT) -8 | \
-		$(MERGE) > fuzokugo.swd
+		$(MERGE) > $@
 
 fuzokugo.cbd: fuzokugo.swd cnj.bits
-	$(CRXDIC) $(COMPATFLAG) -g -s -o fuzokugo.cbd -D cnj.bits -n fuzokugo fuzokugo.swd
+	$(CRXDIC) $(COMPATFLAG) -g -s -o $@ -D cnj.bits -n fuzokugo $<
 
