--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Vcs-Git: https://salsa.debian.org/debian/canna.git
 
 Package: canna
 Architecture: any
+Pre-Depends: ${misc:Pre-Depends}
 Depends: adduser (>= 3.34),
          canna-utils,
          lsb-base,
