--- a/configure.ac
+++ b/configure.ac
@@ -126,6 +126,6 @@ misc/Makefile
 server/Makefile
   ])
 
-AC_CONFIG_SUBDIRS([canuum])
+#AC_CONFIG_SUBDIRS([canuum])
 AC_OUTPUT
 # $Id: configure.ac,v 1.12.2.5 2004/05/19 15:47:33 aida_s Exp $
